@@ -1,4 +1,5 @@
 Development
+    Move subcp out of disable_ass if block
     Make loading a secondary http:// url via open location work correctly
     Set media label to be ellipsized on long values
     If we have an http url and its playback time was very short, retry with the playlist flag
